--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/AdibaSjd/employee-tracker/issues"
   },
-  "homepage": "https://github.com/AdibaSjd/employee-tracker#readme"
+  "homepage": "https://github.com/AdibaSjd/employee-tracker#readme",
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  }
 }
